Descrição das alterações feitas

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -101,7 +101,7 @@
 </head>
 <body>
   <header>
-    <h1>🔥 Emagreça Até 10KG em Apenas 10 Dias!</h1>
+    <h1>🔥 Emagreça Até 15KG em Apenas 10 Dias!</h1>
     <p>Sem Academia, Sem Remédios e Sem Passar Fome</p>
   </header>
 
@@ -120,7 +120,7 @@
       </ul>
     </div>
 
-    <h2>💰 Tudo isso por apenas <strong>R$14,99</strong>!</h2>
+    <h2>💰 Tudo isso por apenas <strong>R$14,90</strong>!</h2>
     <div class="a"><p>(Menos do que um lanche e muito mais saudável 😉)</p>
     </div>
 
@@ -192,7 +192,7 @@
     <h3>⏳ Oferta por tempo LIMITADO!</h3>
     <p>Depois volta ao preço original de R$47. Aproveite agora!</p>
 
-    <a href="" class="button">QUERO EMAGRECER AGORA POR R$14,99</a>
+    <a href="https://pay.kirvano.com/3d6bc446-4a0a-4d36-8ba0-d88de1c7b339" class="button">QUERO EMAGRECER AGORA POR R$14,90</a>
     <p style="text-align: center;">Pagamento 100% seguro | Acesso imediato</p>
   </section>
 </body>
